// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin as a function: as a function 1`] = `

import dedent from "../macro";

dedent(\`
  some stuff
\`);

      ↓ ↓ ↓ ↓ ↓ ↓

"some stuff";


`;

exports[`unknown plugin as a template string: as a template string 1`] = `

import dedent from "../macro";

dedent\`
  some stuff
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

"some stuff";


`;

exports[`unknown plugin explicit newline: explicit newline 1`] = `

import dedent from "../macro";

dedent\`
  <p>
    Hello world!
  </p>

\`;

      ↓ ↓ ↓ ↓ ↓ ↓

"<p>\\n  Hello world!\\n</p>";


`;

exports[`unknown plugin expressions: expressions 1`] = `

import dedent from "../macro";

dedent\`
  first line
    second
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

"first line\\n  second\\n  third";


`;

exports[`unknown plugin multiple indentations: multiple indentations 1`] = `

import dedent from "../macro";

dedent\`
    first
      second
          third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

"first\\n  second\\n      third";


`;
